# SKN30-3rd-1Team

./: .dockerignore  .env.example  .gitignore  .gitignore.example  AGENTS.md  Dockerfile  README.md  WORK_REPORT_GITHUB_APP.md  docker-compose.prod.yml  docker-compose.yml  manual.html  pyproject.toml  requirements.txt  start-paim.bat  start-paim.command  tatus --short
backend/: agentic_graph.py  graph.py  main.py  startup.py  storage.py
deploy/: .env.deploy.example  Caddyfile  README.md  compose.rehearsal.yml  compose.restore.yml  preflight.sh  run-rehearsal.sh  stack.sh
desktop/: .env.example  .env.production  .gitignore  design.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: 3_SYSTEM_ARCHITECTURE.html  AGENTIC_ROUTE_BALANCED_EVAL_20260722.md  AGENTIC_TOOL_ROUTING_CSBOT_EVAL_20260722.html  AGENTIC_TOOL_ROUTING_CSBOT_EVAL_20260722.md  AGENTIC_TOOL_ROUTING_MODU_EVAL_20260722.html  AGENTIC_TOOL_ROUTING_MODU_EVAL_20260722.md  AGENTIC_TOOL_ROUTING_SYSTEM_EVAL_20260722.html  AGENTIC_TOOL_ROUTING_SYSTEM_EVAL_20260722.md  API_명세서.html  API_명세서.md  ARCHITECTURE.md  BACKEND_CHANGES_SUMMARY.md  EVALUATION_ROADMAP.md  EVAL_INSIGHTS_REPORT.html  EVAL_INSIGHTS_REPORT.md  EVAL_REPORT.md  EVAL_REPORT.xlsx  HANDOVER.md  HANDOVER_AUTH_FRONTEND.md  HANDOVER_CITATION_FRONTEND.md  HANDOVER_SUPERSEDE_FRONTEND.md  OVERVIEW_ACTION_PLAN_DESIGN_REPORT_20260722.md  PAIM_USER_REALISTIC_160_EVAL_20260722.md  (+5 more)
(+231 files in other folders)
