[project]
name = "paim"
version = "0.1.0"
description = "LLM 기반 AI 프로젝트 매니저 — 의사결정 맥락 기억 서비스"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "anthropic",
    "openai",
    "google-generativeai",
    "pymysql",
    "chromadb",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-google-genai",
    "langchain-chroma",
    "pydantic",
    "python-dotenv",
    "streamlit>=1.58.0",
    "pypdf>=6.14.2",
    "cryptography",
    "tiktoken",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "frontend"]

[dependency-groups]
dev = [
    "httpx",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
paim-server = "backend.main:serve"
paim-ui = "frontend.app_runner:main"
