[package]
name = "paim"
version = "0.1.0"
description = "PaiM desktop application"
authors = ["PaiM Team"]
edition = "2021"

[lib]
name = "paim_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
